色々まとめたり整理したり

--- a/Other/技術的参考集.md
+++ b/Other/技術的参考集.md
@@ -3,6 +3,8 @@
 こういう記事をまとめる領域も作りたい。  
 という事で作った。  
 
+---
+
 [ソフトウェアエンジニアと技術力](https://speakerdeck.com/soudai/developer-lifework)  
 
 [レベル高いエンジニアが働く土壌ができていない状態で、お金積んでレベル高いエンジニアを雇ったらどうなるの？](https://twitter.com/shin_semiya/status/1473231873866608640)  
@@ -17,6 +19,26 @@
 
 [「Visual Studio」の中の人が作ったプログラマー向け十徳ナイフ「DevToys」](https://forest.watch.impress.co.jp/docs/news/1382919.html)  
 <https://twitter.com/_inductor_/status/1485571312383049731?t=HneO12g8gQeElaHUCh2Wkg&s=09>  
+
+[ディレクトリ構成図を書くときに便利な記号](https://qiita.com/paty-fakename/items/c82ed27b4070feeceff6)
+
+``` txt
+読み          文字
+
+たて        : │ ┃
+たてひだり  : ┨ ┥ ┤ ┫
+たてみぎ    : ┣ ┠ ┝ ├
+ひだりうえ  : ┌ ┏
+ひだりした  : └ ┗
+ふとわく    : ┗┻━┛ ┏┳━┓
+ほそわく    : └┴─┘ ┌┬─┐
+まんなか    : ┼ ╋ ┿ ╂
+みぎうえ    : ┐ ┓
+みぎした    : ┘ ┛
+よこ        : ─ ━
+よこうえ    : ┻ ┷ ┸ ┴
+よこした    : ┳　┯ ┰ ┬
+```
 
 ---
 
