--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -615,25 +615,6 @@ DNSで名前解決の時に使うあれ。
 
 ---
 
-## Linuxディストリビューション
-
-・Red Hat系
- ・Fedora
- ・Red Hat Enterprise Linux
- ・CentOS
-
-・Debian系
- ・Ubuntu
- ・Linux Mint
- ・Raspbian
-
-・Slackware系
- ・Slackware
- ・openSUSE
-
-・独立系
- ・Arck Linux
-
 ## ふるさと納税の申込期限はいつまで？
 
 ふるさと納税で税金の控除を受けるためには、税務上の手続き（控除の申請）が必要で、その対象となる期間は1月1日～12月31日の1年区切りです。  
@@ -644,28 +625,6 @@ DNSで名前解決の時に使うあれ。
 ・binとobjを削除する必要があった模様。
 ・フォルダに追加するだけだと認識されない。
 ・その場合はすべて表示にして、右クリックして追加する。
-
----
-
-[ディレクトリ構成図を書くときに便利な記号](https://qiita.com/paty-fakename/items/c82ed27b4070feeceff6)
-
-``` txt
-読み          文字
-
-たて        : │ ┃
-たてひだり  : ┨ ┥ ┤ ┫
-たてみぎ    : ┣ ┠ ┝ ├
-ひだりうえ  : ┌ ┏
-ひだりした  : └ ┗
-ふとわく    : ┗┻━┛ ┏┳━┓
-ほそわく    : └┴─┘ ┌┬─┐
-まんなか    : ┼ ╋ ┿ ╂
-みぎうえ    : ┐ ┓
-みぎした    : ┘ ┛
-よこ        : ─ ━
-よこうえ    : ┻ ┷ ┸ ┴
-よこした    : ┳　┯ ┰ ┬
-```
 
 ---
 
@@ -689,40 +648,12 @@ DNSで名前解決の時に使うあれ。
 
 ---
 
-## テーブル結合にLIKE演算子を使えるか
-
-[テーブル結合 LIKE演算子](https://teratail.com/questions/65949)  
-
-``` sql
-SELECT
-    テーブル1.X 
-FROM
-    テーブル1
-    LEFT JOIN テーブル2 
-    ON テーブル2.Y LIKE テーブル1.X + '%' 
-    (AND / OR テーブル2でさらに絞りたい条件式)
-WHERE
-    テーブル2.Y IS NULL 
-    AND ~~
-```
-
----
-
 ## ダーティリード、ファントムリードと分離レベル
 
 [トランザクション分離レベルについてのまとめ](https://qiita.com/song_ss/items/38e514b05e9dabae3bdb)  
 [[RDBMS][SQL]トランザクション分離レベルについて極力分かりやすく解説](https://qiita.com/PruneMazui/items/4135fcf7621869726b4b)  
 
 READ UNCOMMITTED
-
----
-
-## 時々コマンドに付いてる--(Double Dash)って何なの？
-
-[時々コマンドに付いてる--(Double Dash)って何なの？](https://zenn.dev/dowanna6/articles/245df006deee0c)  
-
-結論  
-「--」は「これ以降の入力はオプションではありません」と指定する記号です。  
 
 ---
 
@@ -753,96 +684,6 @@ IETFによってRFC 7519として標準化されている。
 
 ---
 
-## 行けそうだけどいけないUPDATE
-
-sqlserverの
-
-``` sql
-UPDATE [TB_会員]
-SET
-    日付0 = MAX(CASE WHEN [AA].ItemCD = '101' THEN [AA].[Date] ELSE NULL END),
-    日付1 = MAX(CASE WHEN [AA].ItemCD = '102' THEN [AA].[Date] ELSE NULL END),
-    日付2 = MAX(CASE WHEN [AA].ItemCD = '103' THEN [AA].[Date] ELSE NULL END),
-    日付3 = MAX(CASE WHEN [AA].ItemCD = '104' THEN [AA].[Date] ELSE NULL END),
-    日付4 = MAX(CASE WHEN [AA].ItemCD = '105' THEN [AA].[Date] ELSE NULL END),
-    日付5 = MAX(CASE WHEN [AA].ItemCD = '106' THEN [AA].[Date] ELSE NULL END),
-    日付6 = MAX(CASE WHEN [AA].ItemCD = '107' THEN [AA].[Date] ELSE NULL END),
-    日付7 = MAX(CASE WHEN [AA].ItemCD = '108' THEN [AA].[Date] ELSE NULL END),
-    日付8 = MAX(CASE WHEN [AA].ItemCD = '109' THEN [AA].[Date] ELSE NULL END),
-    日付9 = MAX(CASE WHEN [AA].ItemCD = '110' THEN [AA].[Date] ELSE NULL END),
-    数値0 = MAX(CASE WHEN [AA].ItemCD = '111' THEN [AA].[Number] ELSE NULL END),
-    数値1 = MAX(CASE WHEN [AA].ItemCD = '112' THEN [AA].[Number] ELSE NULL END),
-    数値2 = MAX(CASE WHEN [AA].ItemCD = '113' THEN [AA].[Number] ELSE NULL END),
-    数値3 = MAX(CASE WHEN [AA].ItemCD = '114' THEN [AA].[Number] ELSE NULL END),
-    数値4 = MAX(CASE WHEN [AA].ItemCD = '115' THEN [AA].[Number] ELSE NULL END),
-    数値5 = MAX(CASE WHEN [AA].ItemCD = '116' THEN [AA].[Number] ELSE NULL END),
-    数値6 = MAX(CASE WHEN [AA].ItemCD = '117' THEN [AA].[Number] ELSE NULL END),
-    数値7 = MAX(CASE WHEN [AA].ItemCD = '118' THEN [AA].[Number] ELSE NULL END),
-    数値8 = MAX(CASE WHEN [AA].ItemCD = '119' THEN [AA].[Number] ELSE NULL END),
-    数値9 = MAX(CASE WHEN [AA].ItemCD = '120' THEN [AA].[Number] ELSE NULL END),
-    名称0 = MAX(CASE WHEN [AA].ItemCD = '121' THEN [AA].[Text] ELSE '' END),
-    名称1 = MAX(CASE WHEN [AA].ItemCD = '122' THEN [AA].[Text] ELSE '' END),
-    名称2 = MAX(CASE WHEN [AA].ItemCD = '123' THEN [AA].[Text] ELSE '' END),
-    名称3 = MAX(CASE WHEN [AA].ItemCD = '124' THEN [AA].[Text] ELSE '' END),
-    名称4 = MAX(CASE WHEN [AA].ItemCD = '125' THEN [AA].[Text] ELSE '' END),
-    名称5 = MAX(CASE WHEN [AA].ItemCD = '126' THEN [AA].[Text] ELSE '' END),
-    名称6 = MAX(CASE WHEN [AA].ItemCD = '127' THEN [AA].[Text] ELSE '' END),
-    名称7 = MAX(CASE WHEN [AA].ItemCD = '128' THEN [AA].[Text] ELSE '' END),
-    名称8 = MAX(CASE WHEN [AA].ItemCD = '129' THEN [AA].[Text] ELSE '' END),
-    名称9 = MAX(CASE WHEN [AA].ItemCD = '130' THEN [AA].[Text] ELSE '' END)
-FROM
-    [TB_会員]
-    INNER JOIN Round3DatBRK_20220308.dbo.TMc_CustomerGenericInfoContent AS [AA]
-    ON [TB_会員].[顧客CD] = REPLACE([AA].[CustomerCD],'BRK','')
-    AND [AA].[UpdateProgram] LIKE 'RN3.WPF%'
-    GROUP BY [TB_会員].[顧客CD]
-
-
-
-
-
-UPDATE
-    [TB_会員] 
-    INNER JOIN Round3DatBRK_20220308.dbo.TMc_CustomerGenericInfoContent AS [RN3_Cus] 
-    ON [TB_会員].顧客CD = REPLACE([RN3_Cus].[CustomerCD],'BRK','')
-    AND [RN3_Cus].[UpdateProgram] LIKE 'RN3.WPF%'
-SET
-    日付0 = MAX(CASE WHEN ItemCD = '101' THEN [Date] ELSE NULL END) AS [日付0],
-    日付1 = MAX(CASE WHEN ItemCD = '102' THEN [Date] ELSE NULL END) AS [日付1],
-    日付2 = MAX(CASE WHEN ItemCD = '103' THEN [Date] ELSE NULL END) AS [日付2],
-    日付3 = MAX(CASE WHEN ItemCD = '104' THEN [Date] ELSE NULL END) AS [日付3],
-    日付4 = MAX(CASE WHEN ItemCD = '105' THEN [Date] ELSE NULL END) AS [日付4],
-    日付5 = MAX(CASE WHEN ItemCD = '106' THEN [Date] ELSE NULL END) AS [日付5],
-    日付6 = MAX(CASE WHEN ItemCD = '107' THEN [Date] ELSE NULL END) AS [日付6],
-    日付7 = MAX(CASE WHEN ItemCD = '108' THEN [Date] ELSE NULL END) AS [日付7],
-    日付8 = MAX(CASE WHEN ItemCD = '109' THEN [Date] ELSE NULL END) AS [日付8],
-    日付9 = MAX(CASE WHEN ItemCD = '110' THEN [Date] ELSE NULL END) AS [日付9],
-    数値0 = MAX(CASE WHEN ItemCD = '111' THEN [Number] ELSE NULL END) AS [数値0],
-    数値1 = MAX(CASE WHEN ItemCD = '112' THEN [Number] ELSE NULL END) AS [数値1],
-    数値2 = MAX(CASE WHEN ItemCD = '113' THEN [Number] ELSE NULL END) AS [数値2],
-    数値3 = MAX(CASE WHEN ItemCD = '114' THEN [Number] ELSE NULL END) AS [数値3],
-    数値4 = MAX(CASE WHEN ItemCD = '115' THEN [Number] ELSE NULL END) AS [数値4],
-    数値5 = MAX(CASE WHEN ItemCD = '116' THEN [Number] ELSE NULL END) AS [数値5],
-    数値6 = MAX(CASE WHEN ItemCD = '117' THEN [Number] ELSE NULL END) AS [数値6],
-    数値7 = MAX(CASE WHEN ItemCD = '118' THEN [Number] ELSE NULL END) AS [数値7],
-    数値8 = MAX(CASE WHEN ItemCD = '119' THEN [Number] ELSE NULL END) AS [数値8],
-    数値9 = MAX(CASE WHEN ItemCD = '120' THEN [Number] ELSE NULL END) AS [数値9],
-    名称0 = MAX(CASE WHEN ItemCD = '121' THEN [Text] ELSE NULL END) AS [名称0],
-    名称1 = MAX(CASE WHEN ItemCD = '122' THEN [Text] ELSE NULL END) AS [名称1],
-    名称2 = MAX(CASE WHEN ItemCD = '123' THEN [Text] ELSE NULL END) AS [名称2],
-    名称3 = MAX(CASE WHEN ItemCD = '124' THEN [Text] ELSE NULL END) AS [名称3],
-    名称4 = MAX(CASE WHEN ItemCD = '125' THEN [Text] ELSE NULL END) AS [名称4],
-    名称5 = MAX(CASE WHEN ItemCD = '126' THEN [Text] ELSE NULL END) AS [名称5],
-    名称6 = MAX(CASE WHEN ItemCD = '127' THEN [Text] ELSE NULL END) AS [名称6],
-    名称7 = MAX(CASE WHEN ItemCD = '128' THEN [Text] ELSE NULL END) AS [名称7],
-    名称8 = MAX(CASE WHEN ItemCD = '129' THEN [Text] ELSE NULL END) AS [名称8],
-    名称9 = MAX(CASE WHEN ItemCD = '130' THEN [Text] ELSE NULL END) AS [名称9]
-WHERE
-    [TB_会員].顧客CD = REPLACE([RN3_Cus].[CustomerCD],'BRK','')
-```
-
----
-
 ##
 
 <https://twitter.com/franc_life_/status/1496233334573346822?t=WleD8oKm4hL6tJHyWvFJ5g&s=09>
@@ -868,356 +709,7 @@ WHERE
 [PrismとLivetで画面を閉じるMVVM](https://redwarrior.hateblo.jp/entry/2020/08/31/090000)  
 [DIYプログラミングでMVVMを推奨しない理由](https://resanaplaza.com/2020/08/13/%E3%80%90wpf%E3%80%91diy%E3%83%97%E3%83%AD%E3%82%B0%E3%83%A9%E3%83%9F%E3%83%B3%E3%82%B0%E3%81%A7mvvm%E3%82%92%E6%8E%A8%E5%A5%A8%E3%81%97%E3%81%AA%E3%81%84%E7%90%86%E7%94%B1/)  
 
----
-
-[方法: グリッド要素を作成する](https://docs.microsoft.com/ja-jp/dotnet/desktop/wpf/controls/how-to-create-a-grid-element?view=netframeworkdesktop-4.8)
-[方法: ToolTip を配置する](https://docs.microsoft.com/ja-jp/dotnet/desktop/wpf/controls/how-to-position-a-tooltip?view=netframeworkdesktop-4.8)
-
-XMLで書いていたことをセルファクトリーで記述できたのでまとめる。
-CellTemplateでは文字色が勝手に変わってしまうけど、CellFactoryでは問題なかった。
-多少の違いはあれど、やらせていることは同じ。
-不思議である。
-これだからFlexGridは嫌いなんだ。
-
-``` XML
-<!-- 一番上の要素でリソース定義 
-     こうしないと拡大率のバインドができなかった。
--->
-    <DockPanel.Resources>
-        <Style x:Key="ToolTipTextBlock" TargetType="TextBlock">
-            <Setter Property="LayoutTransform">
-                <Setter.Value>
-                    <ScaleTransform ScaleX="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type metro:MetroWindow}}, Path=DataContext.Magnification, Mode=TwoWay}" ScaleY="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type metro:MetroWindow}}, Path=DataContext.Magnification, Mode=TwoWay}" />
-                </Setter.Value>
-            </Setter>
-        </Style>
-    </DockPanel.Resources>
-
-<c1:Column
-    Width="100"
-    VerticalAlignment="Center"
-    Binding="{Binding Player2Name, Mode=OneWay}"
-    ColumnName="Player2Name"
-    Header="Player2"
-    HeaderHorizontalAlignment="Center"
-    HeaderVerticalAlignment="Center"
-    IsReadOnly="True"
-    TextWrapping="true">
-    <c1:Column.CellTemplate>
-        <DataTemplate>
-            <Grid ToolTipService.IsEnabled="{Binding Player1Remarks, Mode=OneWay, Converter={StaticResource NotNullOrEmptyToBoolConverter}}">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="*" />
-                    <ColumnDefinition Width="Auto" />
-                </Grid.ColumnDefinitions>
-                <ToolTipService.ToolTip>
-                    <TextBlock Style="{DynamicResource ToolTipTextBlock}" Text="{Binding Player1Remarks, Mode=OneWay}" />
-                </ToolTipService.ToolTip>
-                <TextBlock
-                    Grid.Column="0"
-                    VerticalAlignment="Center"
-                    Focusable="False"
-                    Text="{Binding Player1Name, Mode=OneWay}"
-                    TextWrapping="Wrap" />
-                <TextBlock
-                    Grid.Column="1"
-                    Margin="0,0,5,0"
-                    VerticalAlignment="Center"
-                    Focusable="False"
-                    Text="※"
-                    Visibility="{Binding Player1Remarks, Mode=OneWay, Converter={StaticResource StringToVisibilityConverter}}" />
-            </Grid>
-        </DataTemplate>
-    </c1:Column.CellTemplate>
-</c1:Column>
-```
-
-``` C#
-    /// <summary>
-    /// セルコンテンツ作成
-    /// </summary>
-    /// <param name="grid"></param>
-    /// <param name="bdr"></param>
-    /// <param name="rng"></param>
-    public override void CreateCellContent(C1FlexGrid grid, Border bdr, CellRange rng)
-    {
-        // コンテンツを作成します
-        base.CreateCellContent(grid, bdr, rng);
-
-        // プレーヤー1~4までループ
-        for (int i = 1; i <= 4; i++)
-        {
-            string nameColumnName = $"Player{i}Name";
-            string remarksColumnName = $"Player{i}Remarks";
-            // 指定したカラム名かどうか判定
-            if (grid.Columns[rng.Column].ColumnName == nameColumnName)
-            {
-                 // 備考を取得
-                string contents = (string)grid[rng.Row, remarksColumnName];
-
-                // そのセルに備考が存在したらツールチップを設定
-                if (!string.IsNullOrEmpty(contents))
-                {
-                    // タグにTextBlockおいて、そのTextにバインドして内容取れないかやってみたけど駄目だった。
-                    var mnnn = (grid.Columns[nameColumnName].Tag is TextBlock ts) ? ts.Text : string.Empty;
-
-                    // ツールチップ用テキストブロック定義
-                    TextBlock tooltipBlock = new TextBlock
-                    {
-                        LayoutTransform = new ScaleTransform()
-                        {
-                            ScaleX = (double)grid.LayoutTransform.GetValue(ScaleTransform.ScaleXProperty),
-                            ScaleY = (double)grid.LayoutTransform.GetValue(ScaleTransform.ScaleYProperty),
-                        },
-                        Text = contents
-                    };
-                    // セルにツールチップを設定
-                    ToolTipService.SetToolTip(bdr, tooltipBlock);
-
-                    // プレーヤー名テキストブロック定義
-                    TextBlock nameBlock = new TextBlock
-                    {
-                        HorizontalAlignment = HorizontalAlignment.Left,
-                        VerticalAlignment = VerticalAlignment.Center,
-                        Focusable = false,
-                        TextWrapping = TextWrapping.Wrap,
-                        Text = (string)grid[rng.Row, nameColumnName],
-                    };
-                    // ※マーク用テキストブロック定義
-                    TextBlock noticeBlock = new TextBlock
-                    {
-                        HorizontalAlignment = HorizontalAlignment.Center,
-                        VerticalAlignment = VerticalAlignment.Center,
-                        Text = "※",
-                        Margin = new Thickness(0, 0, 5, 0),
-                        Focusable = false,
-                    };
-                    // テキストブロック格納Grid定義
-                    Grid childGrid = new Grid();
-                    childGrid.ColumnDefinitions.Add(new ColumnDefinition() { Width = new GridLength(1.0, GridUnitType.Star) });
-                    childGrid.ColumnDefinitions.Add(new ColumnDefinition() { Width = GridLength.Auto });
-                    Grid.SetColumn(nameBlock, 0);
-                    Grid.SetColumn(noticeBlock, 1);
-                    _ = childGrid.Children.Add(nameBlock);
-                    _ = childGrid.Children.Add(noticeBlock);
-                    
-                    // これをやるとGridにToolTipServiceを設定できる。
-                    //ToolTipService.SetIsEnabled(childGrid, true);
-                    //ToolTipService.SetToolTip(childGrid, tooltipBlock);
-
-                    // 定義したGridをセル要素に割り当てる
-                    bdr.Child = childGrid;
-                }
-            }
-        }
-    }
-```
-
-案2
-スクロールで色を再設定するだけでは完全に変わらなかった。
-再描画命令を記述したら変わるようになった。
-ただ、これをやると重くなる。
-スクロールの度に2重ループして文字色を再設定した後、すべてのセルを再描画するので当然といえば当然。
-
-``` C#
-using C1.WPF.FlexGrid;
-using Microsoft.Xaml.Behaviors;
-using RN3.Wpf.Common.Util.Extension;
-using System;
-using System.Linq;
-using System.Windows;
-using System.Windows.Controls;
-
-namespace RN3.Wpf.Reservation.ReservationSearch.Behaivor
-{
-    /// <summary>
-    /// FlexGridのカスタムセル内にあるTextBlockのForegroundを再設定するビヘイビア
-    /// </summary>
-    public class ResetFlexGridForegroundBehavior : Behavior<C1FlexGrid>
-    {
-        /// <summary>
-        /// イベント登録
-        /// </summary>
-        protected override void OnAttached()
-        {
-            base.OnAttached();
-            if (AssociatedObject is C1FlexGrid fg)
-            {
-                fg.SelectionChanged -= FlexGrid_CellRangeEventArgs;
-                fg.SelectionChanged += FlexGrid_CellRangeEventArgs;
-                fg.ScrollPositionChanged -= FlexGrid_EventArgs;
-                fg.ScrollPositionChanged += FlexGrid_EventArgs;
-            }
-        }
-
-        /// <summary>
-        /// CellRangeEventArgsイベント処理
-        /// </summary>
-        /// <param name="sender"></param>
-        /// <param name="e"></param>
-        private void FlexGrid_CellRangeEventArgs(object sender, CellRangeEventArgs e) => ReserForeground();
-        /// <summary>
-        /// EventArgsイベント処理
-        /// </summary>
-        /// <param name="sender"></param>
-        /// <param name="e"></param>
-        private void FlexGrid_EventArgs(object sender, EventArgs e) => ReserForeground();
-
-        /// <summary>
-        /// TextBlockの文字色を再設定する
-        /// </summary>
-        private void ReserForeground()
-        {
-            // カスタムテンプレート内のTextBlockの文字色がおかしくなるので、強制的に再設定
-            for (int i = 0; i < AssociatedObject.Rows.Count; i++)
-            {
-                for (int j = 0; j < AssociatedObject.Columns.Count; j++)
-                {
-                    var cell = AssociatedObject.Cells.GetCellElement(new CellRange(i, j));
-                    // 子孫要素からTextBlockを探索、選択箇所に応じてForegroundを再設定
-                    var textBlockList = cell?.FindVisualChildren<TextBlock>();
-                    foreach (var textBlock in textBlockList ?? Enumerable.Empty<TextBlock>())
-                    {
-                        if (AssociatedObject.Selection.Row == i && AssociatedObject.Selection.Column == j)
-                        {
-                            textBlock.Foreground = AssociatedObject.Foreground;
-                        }
-                        else if (AssociatedObject.Selection.Row == i)
-                        {
-                            textBlock.Foreground = AssociatedObject.SelectionForeground;
-                        }
-                        else
-                        {
-                            textBlock.Foreground = AssociatedObject.Foreground;
-                        }
-                    }
-                }
-            }
-            // 再描画命令を記述したら解決するけど重くなる。
-            AssociatedObject.Invalidate();
-        }
-    }
-}
-
-```
-
-
-``` C#
-    // これは駄目だった。
-    if ((bdr.Child is TextBlock t22s))
-    {
-        var cd = t22s.DataContext.GetType().GetProperty(remarksColumnName);
-        var value = cd.GetValue(typeof(string),null);
-    }
-    // FindVisualChildrenはutilのメソッド。TextBlockまでは取れた
-    var aa = grid.Columns[nameColumnName].CellTemplate.LoadContent().FindVisualChildren<TextBlock>();
-    // 取得したTextBlockのTextには何も入っていなかった。
-    if (grid.Columns[nameColumnName].CellTemplate.LoadContent() is TextBlock sss)
-    {
-        var bb = sss.Text;
-    }
-```
-
-最終的にこれで行けた。
-まずセルテンプレートに備考をバインドさせて、セルファクトリーで取得。
-そのままだとセルテンプレートが勝ってしまうので、改めてテンプレートを作ってセルテンプレートに上書きすることで備考の時と通常の時の表示が可能。
-備考カラムを作らなくても行けるようになった。
-
-``` XML
-<c1:Column
-    Width="100"
-    VerticalAlignment="Center"
-    Binding="{Binding Player1Name, Mode=OneWay}"
-    ColumnName="Player1Name"
-    Header="Player1"
-    HeaderHorizontalAlignment="Center"
-    HeaderVerticalAlignment="Center"
-    IsReadOnly="True"
-    TextWrapping="true">
-    <c1:Column.CellTemplate>
-        <DataTemplate>
-            <TextBlock Text="{Binding Player1Remarks, Mode=OneWay}" />
-        </DataTemplate>
-    </c1:Column.CellTemplate>
-</c1:Column>
-```
-
-``` C#
-    /// <summary>
-    /// セルコンテンツ作成
-    /// </summary>
-    /// <param name="grid"></param>
-    /// <param name="bdr"></param>
-    /// <param name="rng"></param>
-    public override void CreateCellContent(C1FlexGrid grid, Border bdr, CellRange rng)
-    {
-        // コンテンツを作成します
-        base.CreateCellContent(grid, bdr, rng);
-
-        // プレーヤー1~4までループ
-        for (int i = 1; i <= 4; i++)
-        {
-            string nameColumnName = $"Player{i}Name";
-            // string remarksColumnName = $"Player{i}Remarks";
-            // 指定したカラム名かどうか判定
-            if (grid.Columns[rng.Column].ColumnName == nameColumnName)
-            {
-                // プレーヤー名テキストブロック定義
-                TextBlock nameBlock = new TextBlock
-                {
-                    HorizontalAlignment = HorizontalAlignment.Left,
-                    VerticalAlignment = VerticalAlignment.Center,
-                    Focusable = false,
-                    TextWrapping = TextWrapping.Wrap,
-                    Text = (string)grid[rng.Row, nameColumnName],
-                };
-                // 備考マーク用テキストブロック定義
-                TextBlock noticeBlock = new TextBlock
-                {
-                    HorizontalAlignment = HorizontalAlignment.Center,
-                    VerticalAlignment = VerticalAlignment.Center,
-                    Text = "※",
-                    Margin = new Thickness(0, 0, 5, 0),
-                    Focusable = false,
-                };
-                // テキストブロック格納Grid定義
-                Grid childGrid = new Grid();
-                childGrid.ColumnDefinitions.Add(new ColumnDefinition() { Width = new GridLength(1.0, GridUnitType.Star) });
-                childGrid.ColumnDefinitions.Add(new ColumnDefinition() { Width = GridLength.Auto });
-                Grid.SetColumn(nameBlock, 0);
-                _ = childGrid.Children.Add(nameBlock);
-
-                // セルテンプレートの備考を取得
-                var contents = (bdr.Child is TextBlock ts) ? ts.Text : string.Empty;
-                // 備考が存在したらそのセルにツールチップを設定
-                if (!string.IsNullOrEmpty(contents))
-                {
-                    // ツールチップ用テキストブロック定義
-                    TextBlock tooltipBlock = new TextBlock
-                    {
-                        LayoutTransform = new ScaleTransform()
-                        {
-                            ScaleX = (double)grid.LayoutTransform.GetValue(ScaleTransform.ScaleXProperty),
-                            ScaleY = (double)grid.LayoutTransform.GetValue(ScaleTransform.ScaleYProperty),
-                        },
-                        Text = contents
-                    };
-                    // プレーヤーiのセルにツールチップを設定
-                    ToolTipService.SetToolTip(bdr, tooltipBlock);
-                    // 備考マークテキストブロックをgridに追加
-                    Grid.SetColumn(noticeBlock, 1);
-                    _ = childGrid.Children.Add(noticeBlock);
-                }
-
-                // 定義したGridをセル要素に割り当てる
-                bdr.Child = childGrid;
-            }
-        }
-    }
-```
-
-
-
+[WPF ItemsControlをDataGridみたいに使う](https://nomoredeathmarch.hatenablog.com/entry/2019/01/21/003825)  
 
 ---
 
