--- a/AppliedInformation/午後/H25S.md
+++ b/AppliedInformation/午後/H25S.md
@@ -2,9 +2,133 @@
 
 ---
 
-## プログラミング
+## プログラミング 一般的な表記法の数式を逆ポーランド表記法に変換するアルゴリズム
 
-``` txt
+30分を過ぎた割には正解しなかったなって感じ。  
+もう一問くらいは正解したかった。  
+逆ポーランドはわかったと思っていたが、全然そんなことはなかった。  
+自分の感覚で解いたら失敗した。  
+仕事終わりに考えるのが面倒だったからだろうか。  
+
+プログラミングの部分に関しては、前後関係をにらめっこするより日本語をそのままプログラミングに落とし込んだほうが早かった。  
+ここができなかったために時間がかかった感じである。  
+後は、変換前配列とスタックの優先度の比較で時間がかかった。  
+これは頭の中だけで考えてしまったからだと思われる。  
+ノートに書きながら右へ左へ比較していれば、少しはましになったと思われる。  
+
+あとあれだ。配列の先頭とスタックの先頭って全く逆なんだ。  
+配列の先頭は要素0だけど、スタックって積み重ねていくモノだから先頭は一番最後の要素が先頭になるんだ。  
+文中では○○の先頭としか言わないから突然逆になるなんて思わないからな。  
+ここの違和感を払拭できなかったのも理解に時間がかかった要因かもしれない。  
+
+ハマったポイントとしてはそんなモノだろうか。  
+ただ25Aよりは明らかに理解できたので、復習は楽である。  
+25年の問題はスタックやポインタ等、根本的な要素に関する問題ばかりなんだな。  
+
+``` txt : 30分オーバー 10/14
+423+× × 23+4×
+×
+÷
++
+-
+
+0
+(1)の演算要素の優先度 × スタック上に演算要素があるか否か or スタックが空であるか否か
+stack[stackCount]
+GetPriority(stackTop)がelementPriority以上
+GetPriority(stack[stackCount])がelementPriority(i)以上 × GetElement(i)が")"である
+
+OK × Err
+OK
+OK
+Err
+
+---
+[1][1]
+問題文の冒頭部で「逆ポーランド表記法とは、演算子を二つの演算対象の後ろに配置することによって、数式を表現する表記法である。」と説明されている通り、通常の数式「A＋B」を逆ポーランド表記法で表現すると「AB＋」になります。
+この変換規則に加えて、1回使った演算子は2度使わないことに注意して、普通に計算式を解くのと同じ順序で変換を行っていくことで逆ポーランド表記法の式になります。
+
+数式 (2＋3)×4 は以下のように変換されます。
+先に計算する"2＋3"の部分を"変換する。
+演算対象の"2"と"3"の後ろに"＋"が配置されるので→23＋×4
+"23＋"を1つの項とみなして、演算子×、もう一つの項を4として変換する。
+演算対象の"23×"と"4"の後ろに"×"が配置されるので→23＋4×
+よって、数式 (2＋3)×4 を逆ポーランド表記法に変換した結果は「23＋4×」が適切です。
+
+∴23＋4×
+
+→
+何を勘違いしたのか。
+先に4をおいて、そのあと23。で[+]で一回計算してその項を[*]で計算すれば答えになると思い込んでいた。
+しかし、文中のロジックを見る限り、先頭から考えるのは必然なので、素直にトレースすればよかった。
+
+
+[1][2]
+逆ポーランドへの変換手順(2)において、スタックの先頭の演算要素の優先度が、参照中である変換前配列の要素の優先度未満になるまで、スタックからのポップ（取り出し操作）を繰り返すという操作手順に注目します。
+
+図1の処理過程で"×"が参照されている時の操作を見ると、"2"はポップされ"＋"はポップされていないことがわかります。
+pm02_5.gif/image-size:427×253
+つまり、"×"の優先度は"2"と同じかそれより低く、"＋"より高いということです。演算の性質から考えて、"×"と"÷"、"＋"と"－"は同じ優先度のグループとすべきなので、優先度が高い[ア][イ]には"×"と"÷"が、[ウ][エ]には"＋"と"－"が当てはまります。
+
+→
+ここの優先度の理解に時間をかけてしまった。
+大きいか小さいかを比較するだけなんだけど、これが意外と難しい。
+紙とペンをもって見比べながら考えたらまた違っただろうか。
+
+
+
+[2][2]
+
+〔カについて〕
+手順(2)は次の4つの処理に分解できます。
+スタック上に演算要素があるか否かを確認する
+スタックの先頭にある演算要素の優先度を参照する
+スタックの先頭にある演算要素の優先度が、現在参照している演算要素の優先度以上ならポップする（繰り返し）
+スタックの先頭にある演算要素が")"なら繰返しを終了する
+(1)の説明の通り null はポップされることのない要素ですので、スタックが空になることはありません。常にスタック上に演算要素がある状態になるので、1番目の「スタック上に演算要素があるか否かを確認する」処理が不要となります。
+"[カ]の判定処理"と続くので、「スタック上に演算要素があるか否か」「スタックが空であるか否か」等の字句が当てはまります。
+
+∴スタック上に演算要素があるか否か
+　スタックが空であるか否か
+→
+安直に文中の表現を借りて回答して満足しただけ。
+回答した時の違和感はすごかったけどそれを検証するほどの余裕がなかったのでそのまま流してしまった。
+(2)の処理がえらいあったので箇条書きにするのが正解だったか。
+
+〔キについて〕
+表3中には変数 stackTop の用途について説明がありませんが、続くwhile文の継続条件式内で「stackTop が"（"以外の間繰り返す」とあるので、stackTop はスタックの先頭の演算要素を格納するための変数だということがわかります。表2の注記にあるように「最後に追加された演算要素がスタックの先頭」なので、stackTop には配列 stack[] の末尾要素を格納することになります。
+
+配列 stack[] の添字は1始まりですので、スタックの要素数を保持する変数 stackCount を使えば配列の末尾要素を参照できます。よって、[キ]には「stack[stackCount]」が当てはまります。
+
+∴キ＝stack[stackCount]
+
+〔クについて〕
+内側のwhile文内ではスタックからポップし、変換後配列 result に追加する操作が行われています。これを行うのは手順(2)の「スタックの演算要素の優先度が、現在参照している演算要素の優先度以上」の間ですので、[キ]には"スタック先頭の演算要素の優先度"と"現在参照している演算要素の優先度"を比較する式が入ります。
+
+スタックの先頭にある演算要素の優先度は、表3中の優先度を取得する関数 GetPriority を使って「GetPriority(stackTop)」で取得できます。そして、現在参照している演算要素の優先度は変数 elementPriority に格納されています。よって[ク]に入る式は、「GetPriority(stackTop) が elementPriority 以上」が適切です。手順(2)の説明とは逆になりますが「elementPriority が GetPriority(stackTop) より小さい」でもプログラムの動作上は問題ないはずです。
+
+∴ク＝GetPriority(stackTop) が elementPriority 以上
+
+〔ケについて〕
+コメント「// 変換前配列を参照し，演算要素を処理する」直後のIF文は、以下の変換アルゴリズムの手順(3)に該当する処理です。
+
+「(1)で参照した演算要素が")"なら，それを破棄し，その際スタックの先頭にあるはずの"("もポップして破棄した後(1)に戻る。(1)で参照した演算要素が")" 以外なら，その演算要素をスタックにプッシュし，(1)に戻る。」
+
+プログラムを見ると、[ケ]の式が真となる場合には stackCount の値をデクリメント（1減算）することでスタックの先頭（stack[] の末尾）にある要素"("を破棄し、偽である場合にはスタックに演算要素をプッシュしています。したがって[ケ]には、現在参照している演算要素が")"である旨の条件式が入ると判断できます。
+
+変換前配列の演算要素は関数 GetElement で取得できるので、現在参照している i 番目の要素を参照するには「GetElement(i)」と記述することになります。この値が")"のとき真となれば良いので、[ケ]には「GetElement(i) が ")" である」が当てはまります。別の年度の午後問題では○と●が同一という字句表現も見られますので、「GetElement(i) と ")" が同一である」でも問題ないでしょう。
+
+∴ケ＝GetElement(i) が ")" である
+
+
+
+[3]
+〔コについて〕
+数値の後に数値が現れる場合です。
+〔逆ポーランド表記法への変換アルゴリズム〕で説明されているように、本アルゴリズムでは「数値は0～9の1桁の数」と限定しています。〔エラーチェックの追加〕にはエラーとする例として「数値の演算要素が2個以上連続する場合」とあるので、評価結果は「Err」です。
+→
+あ、そっか。
+普通に考えれば10の桁になるはずだけど、この問題0~9の1桁って仕様だからErrになるわな。
 ```
 
 ---
