プログラミングとアルゴリズム完了

--- a/AppliedInformation/午後/H25A.md
+++ b/AppliedInformation/午後/H25A.md
@@ -178,6 +178,8 @@ CとかC++やってる人なら解けるのであろう。
 ・r->prev → 1つ前のメモリブロックの先頭アドレス  
 ・r->next->prev → 次のリストの前のリストのアドレスってことは自分自身  
 
+解説を見た限り、ポインタ変数は->nextを表していたりするはず。  
+
 ``` txt 30分オーバー 3/12
 NULL × EDGEの先頭アドレス
 status
