--- a/AppliedInformation/午後/H25S.md
+++ b/AppliedInformation/午後/H25S.md
@@ -131,6 +131,32 @@ pm02_5.gif/image-size:427×253
 普通に考えれば10の桁になるはずだけど、この問題0~9の1桁って仕様だからErrになるわな。
 ```
 
+``` txt
+手順 | 変換前配列     |  ｽﾀｯｸ | 変換後配列
+(1)  | (_ 2 + 3 ) * 4 |       | 
+(3)  | (_ 2 + 3 ) * 4 | (     | 
+(1)  | ( 2_ + 3 ) * 4 |       | 
+(2)  | ( 2_ + 3 ) * 4 | (     |           前の優先度がスタックより小さいならスタックをポップ。先頭が'('の場合は例外
+(3)  | ( 2_ + 3 ) * 4 | ( 2   | 
+(1)  | ( 2 +_ 3 ) * 4 | ( 2   | 
+(2)  | ( 2 +_ 3 ) * 4 | (     | 2         前の優先度がスタックより小さいのでスタックをポップ
+(3)  | ( 2 +_ 3 ) * 4 | ( +   | 2
+(1)  | ( 2 + 3_ ) * 4 | ( +   | 2
+(2)  | ( 2 + 3_ ) * 4 | ( +   | 2         前の優先度がスタックより大きいのでスタックにプッシュ。
+(3)  | ( 2 + 3_ ) * 4 | ( + 3 | 2
+(1)  | ( 2 + 3 )_ * 4 | ( + 3 | 2
+(2)  | ( 2 + 3 )_ * 4 | ( + 3 |           前の優先度がスタックより小さいので先度が低くなるまでスタックをポップ
+(3)  | ( 2 + 3 )_ * 4 | ()    | 23+       かっこを破棄する
+(1)  | ( 2 + 3 ) *_ 4 |       | 23+
+(3)  | ( 2 + 3 ) *_ 4 | *     | 23+       スタックに何もないので単純にプッシュ
+(1)  | ( 2 + 3 ) * 4_ | *     | 23+
+(2)  | ( 2 + 3 ) * 4_ | *     | 23+       前のほうがスタックより優先度高いのでポップはしない
+(3)  | ( 2 + 3 ) * 4_ | * 4   | 23+       前のほうがスタックより優先度高いのでスタックにプッシュ
+(3)  | ( 2 + 3 ) * 4  |       | 23+4*     スタックを先頭からポップして配列にプッシュ
+```
+
+こりゃ混乱するわって感じ。  
+
 ---
 
 ## 組み込みシステム ワイヤレス充電ステーション
